--- a/dashboard/templates/dashboard/dashboard_usuario.html
+++ b/dashboard/templates/dashboard/dashboard_usuario.html
@@ -27,6 +27,11 @@
         <a href="{% url 'validar_asistencia' %}" class="btn btn-success btn-lg">
             ✅ Validar asistencia
         </a>
+        
+        <!-- Botón Ver tabla Dynamo -->
+        <a href="{% url 'ver_dynamo' %}" class="btn btn-primary btn-lg mt-3">
+            📊 Ver tabla completa
+        </a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
