--- a/dashboard/templates/dashboard/dashboard_usuario.html
+++ b/dashboard/templates/dashboard/dashboard_usuario.html
@@ -14,7 +14,6 @@
             <a href="{% url 'logout' %}" class="btn btn-outline-danger btn-sm mt-2">🔒 Cerrar sesión</a>
         </div>
 
-        <!-- Mostrar mensajes (por ejemplo, si se validó asistencia) -->
         {% if messages %}
             <div class="alert alert-success" role="alert">
                 {% for message in messages %}
@@ -23,15 +22,19 @@
             </div>
         {% endif %}
 
-        <!-- Botón Validar asistencia -->
-        <a href="{% url 'validar_asistencia' %}" class="btn btn-success btn-lg">
-            ✅ Validar asistencia
-        </a>
-        
-        <!-- Botón Ver tabla Dynamo -->
-        <a href="{% url 'ver_dynamo' %}" class="btn btn-primary btn-lg mt-3">
-            📊 Ver tabla completa
-        </a>
+        <div class="d-grid gap-3 col-6 mx-auto">
+            <a href="{% url 'validar_asistencia' %}" class="btn btn-success btn-lg">
+                ✅ Validar asistencia
+            </a>
+
+            <a href="{% url 'ver_dynamo' %}" class="btn btn-primary btn-lg">
+                📊 Ver tabla completa
+            </a>
+
+            <a href="{% url 'ver_usuarios_activos' %}" class="btn btn-warning btn-lg">
+                👥 Usuarios activos
+            </a>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
